<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="en">
    <string name="show_password">Show password</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="view_image">View Image</string>
    <string name="annotate_image">Annotate Image</string>
    <string name="signature_capture">Signature Capture</string>
    <string name="view_video">View Video</string>
    <string name="choose_audio">Choose Audio</string>
    <string name="add_repeat_question">Add \"%s\"?</string>
    <string name="add_repeat">Add</string>
    <string name="dont_add_repeat">Do not add</string>
    <string name="add_another_menu">Add another</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_loading_form">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="canceling">Canceling</string>
    <string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as finalized. It may be encrypted.</string>
    <string name="capture_audio">Record Sound</string>
    <string name="capture_image">Take Picture</string>
    <string name="capture_osm">Launch OpenMapKit</string>
    <string name="recapture_osm">Redo OSM Tagging</string>
    <string name="capture_video">Record Video</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">ODK Password</string>
    <string name="change_username">ODK Username</string>
    <string name="clearanswer_confirm">\"%s\" के लिए प्रतिउत्तर को हटायें क्या?</string>
    <string name="clear_answer">चयनित उत्तर को हटाएं</string>
    <string name="clear_answer_ask">क्या आप चयनित उत्तर को हटाना चाहते हैं?</string>
    <string name="clear_answer_no">Cancel</string>
    <string name="data">Saved Forms</string>
    <string name="data_saved_error">Sorry, form save failed!</string>
    <string name="data_saved_ok">Your request to send SMS(es) has been successfully submitted!</string>
    <string name="save_point_error">Error saving recovery point: %s</string>
    <string name="default_completed">Default to finalized</string>
    <string name="default_completed_summary">Mark form as finalized by default</string>
    <string name="delete_confirm">Delete %s form(s)?</string>
    <string name="delete_file">Delete Selected</string>
    <string name="delete_no">Do Not Delete</string>
    <string name="delete_repeat">Remove group</string>
    <string name="delete_repeat_ask">Remove This Group?</string>
    <string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
    <string name="delete_repeat_no">Cancel</string>
    <string name="delete_yes">Delete Forms</string>
    <string name="discard_answer">चयनित उत्तर को हटाएं </string>
    <string name="discard_group">Remove group</string>
    <string name="download">Get Selected</string>
    <string name="download_forms_result">Download Results</string>
    <string name="downloading_data">Connecting to Server</string>
    <string name="do_not_change">Cancel</string>
    <string name="do_not_exit">रद्द करें</string>
    <string name="do_not_save">Ignore Changes</string>
    <string name="enter_data">Fill Blank Form</string>
    <string name="enter_data_button">Fill Blank Form</string>
    <string name="error_occured">Error Occurred</string>
    <string name="error_attaching_binary_file">An error occurred while attaching the media: %s</string>
    <string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
    <string name="file_deleted_ok">%s form(s) successfully deleted!</string>
    <string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
    <string name="file_invalid">File: %s is invalid.</string>
    <string name="file_missing">File: %s is missing.</string>
    <string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
    <string name="forms">Blank Forms</string>
    <string name="getting_location">Loading Location</string>
    <string name="get_barcode">Get Barcode</string>
    <string name="get_forms">Get Blank Form</string>
    <string name="get_location">Record Location</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="invalid_space_in_answer_singular">Warning: underlying value %s has spaces</string>
    <string name="invalid_space_in_answer_plural">Warning: underlying values %s have spaces</string>
    <string name="jump_to_beginning">Go To Start</string>
    <string name="jump_to_end">Go To End</string>
    <string name="jump_to_previous">Go Up</string>
    <string name="list_failed_with_error">Form listing failed. %s.</string>
    <string name="loading_form">प्रश्न पत्र लोड हो है</string>
    <string name="load_remote_form_error">Error Getting Form List</string>
    <string name="location_accuracy">Accuracy: %1$s m</string>
    <string name="location_provider">Location provider: %s</string>
    <string name="manage_files">Delete Saved Form</string>
    <string name="mark_finished">Mark form as finalized</string>
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_sent_forms">Nothing available to display.\n\nTry sending finalized forms before viewing.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nAll previous forms have been submitted successfully.</string>
    <string name="ok">ठीक है</string>
    <string name="parse_error">Sorry, unable to parse form.</string>
    <string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
    <string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
    <string name="password">Password</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">कृपया कुछ क्षण प्रतीक्षा करें</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="quit_application">ध्यान दें !!</string>
    <string name="quit_entry">आगे बढ़ें</string>
    <string name="refresh">Refresh</string>
    <string name="group_label">Group</string>
    <string name="repeatable_group_label">Repeatable Group</string>
    <string name="replace_barcode">Replace Barcode</string>
    <string name="required_answer_error">प्रश्न का उत्तर देना अनिवार्य हैं</string>
    <string name="review_data">Edit Saved Form</string>
    <string name="view_data">View Saved Form</string>
    <string name="review_data_button">Edit Saved Form (%s)‎‎‎‎</string>
    <string name="save_all_answers">Save Form</string>
    <string name="save_enter_data_description">You are at the end of %s.</string>
    <string name="saving_form">परिणाम ला रहे हैं </string>
    <string name="sending_items">Sending %1$s of %2$s form(s)</string>
    <string name="send_data">Send Finalized Form</string>
    <string name="send_data_button">Send Finalized Form (%s)</string>
    <string name="send_selected_data">Send Selected</string>
    <string name="view_sent_forms">View Sent Forms</string>
    <string name="view_sent_forms_button">View Sent Form (%s)</string>
    <string name="server_auth_credentials">Invalid username or password for server: %s</string>
    <string name="server_requires_auth">Server Requires Authentication</string>
    <string name="server_url">URL</string>
    <string name="server_preferences">Server Settings</string>
    <string name="trigger">OK. Please continue.</string>
    <string name="uploading_data">Sending Form</string>
    <string name="url_error">Sorry, invalid URL!</string>
    <string name="username">Username</string>
    <string name="view_hierarchy">Go To Prompt</string>
    <string name="general_preferences">General Settings</string>
    <string name="client">User interface</string>
    <string name="show_splash_summary">Shows when application starts</string>
    <string name="splash_path">Selected splash image</string>
    <string name="default_splash_path">ODK Default</string>
    <string name="select_another_image">Select another image</string>
    <string name="use_odk_default">Use default image</string>
    <string name="change_splash_path">Change image</string>
    <string name="keep_changes">Save Changes</string>
    <string name="change_formlist_url">Form list path (appended to URL)</string>
    <string name="change_protocol">Platform</string>
    <string name="change_submission_url">Submission path (appended to URL)</string>
    <string name="formlist_url">Form list path</string>
    <string name="submission_url">Submission path</string>
    <string name="font_size">Text font size</string>
    <string name="change_font_size">Text font size</string>
    <string name="access_error">Error while accessing %s: </string>
    <string name="manifest_server_error">Manifest reply does not report an OpenRosa version — bad server?</string>
    <string name="root_element_error">Root element is not &lt;manifest\&gt; — was %s</string>
    <string name="root_namespace_error">Root element Namespace is incorrect: %s</string>
    <string name="manifest_tag_error">Manifest entry %s is missing one or more tags: filename, hash, or downloadUrl</string>
    <string name="form_download_progress">%1$s. Getting media files: %2$s of %3$s</string>
    <string name="file_fetch_failed">Error: %2$s (%3$s) at %1$s</string>
    <string name="fetching_manifest">%s. Getting manifest </string>
    <string name="success">Success</string>
    <string name="failures">Failures</string>
    <string name="no_forms_uploaded">Sorry, no form was uploaded.</string>
    <string name="upload_results">Your form has been submitted with the following status</string>
    <string name="xform_parse_error">XForm parse error for %1$s: %2$s is missing or invalid.</string>
    <string name="choose_file">Choose File</string>
    <string name="choose_sound">Choose Sound</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_image">Choose Image</string>
    <string name="selected">Selected: </string>
    <string name="select_answer">Select Answer</string>
    <string name="save_form_as">Name this form</string>
    <string name="save_as_error">Saved name must not be blank!</string>
    <string name="edit_prompt">उत्तर को संशोधित करें</string>
    <string name="selected_google_account_text">Google account</string>
    <string name="font_size_extra_large">Extra Large</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_extra_small">Extra Small</string>
    <string name="change_view">Change View</string>
    <string name="show_sent_and_unsent_forms">Show Sent and Unsent Forms</string>
    <string name="show_unsent_forms">Show Unsent Forms</string>
    <string name="added_on_date_at_time">\'Added on\' EEE, MMM dd, yyyy \'at\' HH:mm</string>
    <string name="storage_migration_dialog_message1">Android requirements have changed and files used by Collect must be migrated by August 2020.</string>
    <string name="migrate">Migrate</string>
    <string name="storage_migration_progress_msg">Migration in progress.\nThis may take a few seconds…</string>
</resources>