<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/errorText"
        style="@style/TextAppearance.Collect.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="@dimen/margin_large"
        android:visibility="gone" />

    <TextView
        android:id="@+id/messageText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorText"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/storage_migration_dialog_message1"
        android:letterSpacing="0.09"
        android:textColor="#303765"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="normal" />


    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@id/messageText1"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            style="@style/TextAppearance.Collect.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_horizontal"
            android:text="@string/storage_migration_progress_msg" />
    </LinearLayout>


    <Button
        android:id="@+id/migrateButton"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_below="@id/progressBar"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textAllCaps="true"
        style="@style/ButtonStyle1"
        android:paddingTop="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingBottom="@dimen/margin_small"
        android:text="@string/migrate"
        android:textColor="@color/white" />


</RelativeLayout>
