<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2009 University of Washington Licensed under the Apache
License, Version 2.0 (the "License"); you may not use this file except in
compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software distributed
under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
OR CONDITIONS OF ANY KIND, either express or implied. See the License for
the specific language governing permissions and limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <TextView
            android:visibility="gone"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:visibility="visible"
            android:id="@+id/save_form_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/save_form_as"
            android:textSize="21sp" />

        <EditText
            android:textColor="@color/black"
            android:visibility="gone"
            android:id="@+id/save_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="21sp" />

        <CheckBox
            android:visibility="gone"
            android:id="@+id/mark_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:text="@string/mark_finished"
            android:textSize="21sp" />

        <ImageView
            android:layout_marginBottom="70dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_plan"
            android:layout_width="220dp"
            android:layout_height="240dp">

        </ImageView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_exit_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            style="@style/ButtonStyle1"
            android:text="@string/quit_entry"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/offline_msg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textColor="#212121" />


        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>

</ScrollView>